--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
         "axios": "^1.7.3",
         "bcryptjs": "^2.4.3",
         "framer-motion": "^11.3.18",
-        "next": "13.4.7",
+        "next": "^14.2.6",
         "next-auth": "^5.0.0-beta.20",
         "path-to-regexp": "^7.2.0",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.53.0",
         "react-icons": "^5.2.1",
         "react-number-format": "^5.4.0",
         "react-quill": "^2.0.0",
         "styled-components": "^6.1.12",
+        "use-debounce": "^10.0.3",
         "uuid": "^10.0.0",
         "zod": "^3.23.8"
     },
